<resources>
    <string name="app_name">NASA Gallery App</string>
    <string name="nasa_gallery_app">NASA Gallery App</string>
    <string name="image_from_nasa">Image from NASA</string>
    <string name="know_more">Know More</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_date">1 JAN 2020</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="copyright">Copyright:</string>
    <string name="sample_copyright">James Arthur</string>
    <string name="date">Date:</string>
</resources>