<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ImageDetailsActivity">

    <ImageView
        android:id="@+id/image_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_from_nasa"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shader"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="60dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/image_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/image_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_date"
            android:textColor="#BABABA"
            android:textSize="14sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/know_more" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/image_details_back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>